tests/snapshots/view_snapshots__bug_header_mismatch_initial.snap
---
source: tests/view_snapshots.rs
assertion_line: 2262
expression: output.clone()
---
Model: Unknown | Subagent toolu_subagent2 | /test | 0 tools, 0 agents, 0 skills
┌Conversations─────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Main Agent │ toolu_subagent2 │ toolu_subagent1                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Main Agent (2 entries)────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
││   2 Main agent message 1                                                                                            │
│── 100 in / 50 out / $0.01 | Context: 100 (0%) ──                                                                     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
