tests/snapshots/view_snapshots__bug_horizontal_scroll_no_effect.snap
---
source: tests/view_snapshots.rs
assertion_line: 1365
expression: scrolled_output
---
Model: Unknown | Main Agent
┌Main Agent (1 entries)────────────────────────────────────┐
│🔧  Tool: Read                                             │
│  {                                                       │
│    "file_path": "/this/is/a/very/long/path/that/exceeds/t│
│  }                                                       │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search
