tests/snapshots/view_snapshots__bug_initial_screen_blank_until_keypress.snap
---
source: tests/view_snapshots.rs
assertion_line: 801
expression: output
---
Model: Unknown | Main Agent | ? | 0 tools, 0 agents, 0 skills
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main Agent                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main Agent (20 entries) ▶─────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│   3│Let me understand the task:                                              │
│   3│                                                                         │
│   3│1. I'm a coordinator agent that CANNOT read/write code directly          │
│   3│(+8 more lines)                                                          │
│                                                                              │
│   4│I'll start by loading the required skill and then following the coordinat│
│   4│otocol.                                                                  │
│                                                                              │
│   5│🔧  Tool: Skill                                                           │
│   5│  {                                                                      │
│   5│    "skill": "efficient-subagent-orchestration"                          │
│   5│  }                                                                      │
│                                                                              │
│   6│🔧  Tool: Skill                                                           │
│   6│  {                                                                      │
│   6│    "skill": "beads-project-tracking"                                    │
│   6│  }                                                                      │
│                                                                              │
│   7│Launching skill: efficient-subagent-orchestration                        │
│                                                                              │
│   8│Base directory for this skill: /home/claude/.claude/skills/efficient-suba│
│   8│orchestration                                                            │
│   8│                                                                         │
│   8│(+179 more lines)                                                        │
│                                                                              │
│   9│Launching skill: beads-project-tracking                                  │
│                                                                              │
│  10│Base directory for this skill: /home/claude/.claude/skills/beads-project-│
│  10│ing                                                                      │
│  10│                                                                         │
│  10│(+210 more lines)                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
