tests/snapshots/view_snapshots__bug_jerky_scroll_before.snap
---
source: tests/view_snapshots.rs
expression: before_str
---
│First entry line 1                                                            │
│First entry line 2                                                            │
│First entry line 3                                                            │
│                                                                              │
│Second entry line 1                                                           │
│Second entry line 2                                                           │
│                                                                              │
│Third entry - single line                                                     │
