tests/snapshots/view_snapshots__bug_subagent_entries_not_in_tabs.snap
---
source: tests/view_snapshots.rs
expression: output
---
Model: claude-opus-4-5-20251101 | Main Agent | /home/claude/cclv | 18 tools, 17 agents, 33 skills
┌Conversations─────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Main Agent │ toolu_01HTBrtxPQYmFfvr3Dc5SB1y                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Main Agent (4 entries) ▶──────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
││   2 Launching skill: efficient-subagent-orchestration                                                               │
│                                                                                                                      │
││   3 Let me understand the task:                                                                                     │
││                                                                                                                     │
││     1. I'm a coordinator agent that CANNOT read/write code directly                                                 │
││     2. I need to claim ONE bead from the epic cclv-07v                                                              │
││     3. I need to first run the efficient-subagent-orchestration skill                                               │
││     4. I need to follow the protocol: setup, find epic, check checklists, load context, find ready work, execute    │
││                                                                                                                     │
││     Let me start by loading the required skill and then following the protocol.                                     │
││                                                                                                                     │
││     First, I'll invoke the efficient-subagent-orchestration skill as required.                                      │
│── 9 in / 1 out / $0.06 | Context: 37.4k (18%) ──                                                                     │
││   4 🔧  Tool: Task                                                                                                   │
││       {                                                                                                             │
││         "description": "Create flake.nix for cclv",                                                                 │
││         "model": "sonnet",                                                                                          │
││         "prompt": "## Task: Create flake.nix for Claude Code Log Viewer (cclv)\n\n**Bead ID**: cclv-07v.1.1\n\n## Co│
││         "subagent_type": "nix-devops-expert"                                                                        │
││       }                                                                                                             │
│── 6 in / 1.2k out / $0.20 | Context: 109.1k (54%) ──                                                                 │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
